# mtg-kc

./: .gitignore  CLAUDE.md  README.md  REQUIREMENTS.md  __init__.py  demo.py  demo_instance.py  edges_by_disposition.sparql  graph.py  kc_core_shapes.ttl  pyproject.toml  schema.py  test_core_owl.py  test_knowledge_complex.py  test_mtg_demo.py  vertices.sparql
.github/workflows/: deploy.yml
_review/: approval  approved.sha
demo/: README.md  demo.py  demo_instance.py
demo/src/: instance.ttl  ontology.ttl  shapes.ttl
docs/: ARCHITECTURE.md  PLAN.md  REQUIREMENTS.md  ROADMAP.md
docs/case-study/: README.md  case_study_mzargham.md  case_study_mzargham_v2.md  feedback_observability.md  learnings_framework.md  meta_analysis_kc_personality.md  methodology_generalized.md  (+2 more)
kc/: __init__.py  exceptions.py  graph.py  schema.py
models/: __init__.py
references/: the-mtg-color-wheel.md
tests/: qc_io.py  test_abstraction_boundary.py  test_core_owl.py  test_core_owl_extended.py  test_core_shacl.py  test_core_shacl_extended.py  test_exceptions.py  test_hypothesis_criteria.py  test_knowledge_complex.py  test_knowledge_complex_contract.py  test_model_io.py  test_mtg_demo.py  test_query_templates.py  test_schema_builder.py  test_schema_builder_contract.py  test_text_descriptor.py  test_two_by_two_coverage.py  test_vocab.py
worklog/: CLAUDE.md  README.md  wp0-repo-org.md  wp1-wp2-core-review.md  wp2.5-stub-alignment.md  wp2.8-abstraction-boundary.md  wp3-python-api.md  wp4-demo-instance.md  wp4.5-essay-attributes.md  wp5-notebook.md  wp5-session-prompt.md  wp6-ci-deploy.md
(+17 files in other folders)
