[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kc"
version = "0.1.0"
description = "Knowledge Complex — Semantic Web Toolchain Proof of Concept"
requires-python = ">=3.11"
dependencies = [
    "rdflib>=7.0",
    "pyshacl>=0.25",
    "owlrl>=6.0",
    "pandas>=2.0",
]

[project.optional-dependencies]
notebook = [
    "marimo>=0.6",
    "networkx>=3.0",
    "matplotlib>=3.8",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["kc", "models"]
